パンくずリスト

--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -26,31 +26,64 @@
     {% endfor %}
 {% endif %}
 
-<!-- ジャンボトロン　エリア微調整したい。大きすぎる -->
-<div id="title" class="jumbotron jumbotron-fluid" style="margin-top:0px; padding-top:60px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(0, 123, 255, 0.8); color: white;">
-    <div class="container">
-        <h2 class="display-6">買ってよかったもの発表ドラゴン</h2>
-        <p class="lead">正式名称が〜</p>
+{% comment %}
+<!--&lt;!&ndash; ジャンボトロン　エリア微調整したい。大きすぎる &ndash;&gt;-->
+<!--<div id="title" class="jumbotron jumbotron-fluid" style="margin-top:0px; padding-top:60px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(0, 123, 255, 0.8); color: white;">-->
+<!--    <div class="container">-->
+<!--        <h2 class="display-6">買ってよかったもの発表ドラゴン</h2>-->
+<!--        <p class="lead">正式名称が〜</p>-->
+<!--    </div>-->
+<!--</div>-->
+{% endcomment %}
+
+<!-- nav　左サイドに固定化 -->
+<nav style="position: fixed; margin-top: 70px; top: 0; left: 0; height: 100%; overflow-y: auto; width: 10rem; background-color: #f8f9fa;">
+    <!-- タブ部分 -->
+    <ul class="nav nav-pills flex-column float-left" id="myTab" role="tablist" style="max-width: 12rem">
+        <li class="nav-item"><a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab"
+                                aria-controls="home" aria-selected="true">ランキングを見る</a></li>
+        <li class="nav-item"><a class="nav-link" id="profile-tab" data-toggle="pill" href="#profile" role="tab"
+                                aria-controls="profile" aria-selected="false">ランキング登録</a></li>
+        <li class="nav-item"><a class="nav-link" id="contact-tab" data-toggle="pill" href="#contact" role="tab"
+                                aria-controls="contact" aria-selected="false">空間イメージ</a></li>
+        <li class="nav-item dropright">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+               aria-expanded="false">ドロップダウン</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">リンク1</a>
+                <a class="dropdown-item" href="#">リンク2</a>
+                <a class="dropdown-item" href="#">リンク3</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">その他のリンク</a>
+            </div>
+        </li>
+    </ul>
+</nav>
+
+<!-- コンテンツ部分 -->
+<div style="margin-left: 8rem; padding: 1rem;">
+    <div class="tab-content mt-3 mb-3" id="myTabContent">
+
+        <!--コンテンツ1-->
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <!--<img class="card-img-top" src="{% static 'img/ウソップ.png' %}" alt="..." style="max-width: 3rem">-->
+        </div>
+
+        <!--コンテンツ2-->
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        </div>
+
+        <!--コンテンツ3-->
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+        </div>
+
     </div>
 </div>
 
-<h3 style="margin-top:90px;">ランキング登録</h3>
-<form name="form_top_page" id="form_top_page" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="form-control">
-        <div class="row m-1">
-                {% for rank_data_form in rank_data_form %}
-                <div class="col-2 px-0">{{ rank_data_form.label }}{{ rank_data_form }}</div>
-                {% endfor %}
-                <div class="col-2"><button class="btn btn-primary mt-2" type="submit">登録</button></div>
-                <input class="form-control" type="file" name="product_pict">
-<!--                <label class="col-2 btn btn-primary">Choose file <input type="file" hidden></label>-->
-        </div>
-    </div>
-</form>
-<br>
-<br>
-<h3>ランキングを見る</h3>
+
+<div style="margin-left: 8rem;">
+
+<h3 style="margin-top:0px;" id="show">ランキングを見る</h3>
 <table class="table table-bordered border-dark">
     <thead class="table-info">
     <tr>
@@ -68,7 +101,28 @@
     </tbody>
 </table>
 <br>
+
+<h3 style="margin-top:0px;" id="entry">ランキング登録</h3>
+<form name="form_top_page" id="form_top_page" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="form-control">
+        <div class="row m-1">
+                {% for rank_data_form in rank_data_form %}
+                <div class="col-2 px-0">{{ rank_data_form.label }}{{ rank_data_form }}</div>
+                {% endfor %}
+                <div class="col-2"><button class="btn btn-primary mt-2" type="submit">登録</button></div>
+                <input class="form-control" type="file" name="product_pict">
+                <!--<label class="col-2 btn btn-primary">Choose file <input type="file" hidden></label>-->
+        </div>
+    </div>
+</form>
 <br>
-<img src="{% static 'img/home.jpg' %}" alt="画像の説明" id="float" />
+
+<h3 style="margin-top:0px;" id="image">空間イメージ</h3>
+<img src="{% static 'img/home.jpg' %}" alt="画像の説明" id="float" /><br>
+
+<br>
+<br>
+</div>
 {% endblock %}
 
