--- a/templates/base.html
+++ b/templates/base.html
@@ -74,13 +74,33 @@
     <!--各ヘッダー格納-->
     {% block header %}{% endblock %}
 </head>
+<body class="pt-5" data-spy="scroll" data-target="#navbar" style="padding-top:50px; padding-bottom:50px;">
 
+<!--baseフッダー-->
+<nav class="navbar navbar-expand fixed-bottom navbar-dark bg-dark" role="navigation" style="height:30px">
+    <div class="col-3">
+        <a class="navbar-brand" href="#">一番上に戻る</a>
+    </div>
+    <div class="col-3 offset-md-8">
+        <ul class="navbar-nav p-3">
+            <li class="navbar-item dropup">
+                <button type="button" class="btn btn-dark nav-link dropdown-toggle" id="navbarDropdownMenu2"
+                        data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">ChatBot</button>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu2">
+                    <h6 class="dropdown-header">ChatBot</h6>
+                    <div class="dropdown-divider"></div>
+                    <span class="dropdown-item-text">AI君</span>
+                    <span class="dropdown-item-text">クレーマーさん</span>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+{% comment %}
 <!--baseヘッダー-->
-<body class="pt-5">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-
-<!--ナビゲーションバーのトグル機能、あってるのかいつか確認はしたいけど、、、-->
+        <!--ナビゲーションバーのトグル機能、あってるのかいつか確認はしたいけど、、、-->
         <!--こいつなに？-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -98,23 +118,30 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
-
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item active"><a class="nav-link" aria-current="page" href="#">ランキング登録　/</a></li>
+                <li class="nav-item active"><a class="nav-link" aria-current="page" href="{% url 'top' %}">TOP　/</a></li>
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="#">ランキングを見る　/</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">イメージ　/</a></li>
                 <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a></li>
             </ul>
             <span class="navbar-text">
                 ようこそ{{ request.user.last_name }}{{ request.user.first_name }}さん
-                バーガーメニューしたい
+                三
             </span>
         </div>
+
     </div>
 </nav>
+{% endcomment %}
 
-
-
+<nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="breadcrumb" role="navigation">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link active" href="#show">show</a></li>
+            <li class="nav-item"><a class="nav-link" href="#entry">entry</a></li>
+            <li class="nav-item"><a class="nav-link" href="#image">image</a></li>
+        </ul>
+    </div>
+</nav>
 
 
 <!--各コンテンツ格納-->
