--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
     <!--各ヘッダー格納-->
     {% block header %}{% endblock %}
 </head>
-<body class="pt-5" data-spy="scroll" data-target="#navbar" style="padding-top:50px; padding-bottom:50px;">
+<body class="pt-5" data-spy="scroll" data-target="#navbar" style="padding-top:0px; padding-bottom:0px;">
 
 <!--baseフッダー-->
 <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-dark" role="navigation" style="height:30px">
@@ -96,7 +96,7 @@
         </ul>
     </div>
 </nav>
-{% comment %}
+
 <!--baseヘッダー-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -132,8 +132,8 @@
 
     </div>
 </nav>
-{% endcomment %}
 
+{% comment %}ヘッダーでスクロールスパイ機能
 <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="breadcrumb" role="navigation">
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link active" href="#show">show</a></li>
@@ -142,7 +142,7 @@
         </ul>
     </div>
 </nav>
-
+{% endcomment %}
 
 <!--各コンテンツ格納-->
 <main class="container-fluid themed-container">
