--- a/templates/base.html
+++ b/templates/base.html
@@ -119,9 +119,9 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item active"><a class="nav-link" aria-current="page" href="{% url 'top' %}">TOP　/</a></li>
-                <li class="nav-item"><a class="nav-link" aria-current="page" href="#">ランキングを見る　/</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">イメージ　/</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'top' %}">TOP　/</a></li>
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="">ランキングを見る　/</a></li>
+                <li class="nav-item"><a class="nav-link" href="">イメージ　/</a></li>
                 <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a></li>
             </ul>
             <span class="navbar-text">
