--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-FTyAmlUhU3pAoEjss+ayE0F5xDjdExFNWtbxdRN+7s0O7r5fSkMfpPt/B4yTNyzE" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpy3dYDeYY6x0q8XtF9cX5Zb8ULlH1a4N/BmQZkl6Q6o7/tv7hZIM4Xpjblgk9i/" crossorigin="anonymous"></script>-->
+
 
     <!-- Select2 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
