--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -158,8 +158,8 @@
 
 <h3 style="padding-top: 60px; margin-top: -60px; " id="image">空間イメージ</h3>
 <img src="{% static 'img/home.jpg' %}" alt="画像の説明" id="house" /><br>
-<img src="{% static 'img/202409.jpg' %}" alt="画像の説明" id="202409" /><br>
-<img src="{% static 'img/home.jpg' %}" alt="画像の説明" id="float" /><br>
+<img src="{% static 'img/202409.jpg' %}" alt="画像の説明" id="202409" width="800" height="1000"><br>
+<img src="{% static 'img/home.jpg' %}" alt="画像の説明" id="202408" width="800" height="1000"><br>
 
 <br>
 <br>
