--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -27,14 +27,14 @@
 {% endif %}
 
 {% comment %}
-<!--&lt;!&ndash; ジャンボトロン　エリア微調整したい。大きすぎる &ndash;&gt;-->
-<!--<div id="title" class="jumbotron jumbotron-fluid" style="margin-top:0px; padding-top:60px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(0, 123, 255, 0.8); color: white;">-->
-<!--    <div class="container">-->
-<!--        <h2 class="display-6">買ってよかったもの発表ドラゴン</h2>-->
-<!--        <p class="lead">正式名称が〜</p>-->
-<!--    </div>-->
-<!--</div>-->
 {% endcomment %}
+<!-- ジャンボトロン　エリア微調整したい。大きすぎる -->
+<div id="title" class="jumbotron jumbotron-fluid" style="margin-top:0px; padding-top:60px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(0, 123, 255, 0.8); color: white;">
+    <div class="container">
+        <h2 class="display-6">買ってよかったもの発表ドラゴン</h2>
+        <p class="lead">正式名称が〜</p>
+    </div>
+</div>
 
 <!-- nav　左サイドに固定化 -->
 <nav id="navbar" style="position: fixed; top: 70px; left: 0; height: 100%; overflow-y: auto; width: 10rem; background-color: #f8f9fa;">
