--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,7 @@
 
 <body class="pt-5" data-spy="scroll" data-target="#navbar" style="padding-top:0px; padding-bottom:0px;">
 
+{% comment %}
 <!-- baseフッダー -->
 <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-dark" role="navigation" style="height:30px">
     <div class="col-3">
@@ -101,6 +102,7 @@
         </ul>
     </div>
 </nav>
+{% endcomment %}
 
 <!-- baseヘッダー -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
