--- a/templates/base.html
+++ b/templates/base.html
@@ -151,6 +151,79 @@
 </nav>
 {% endcomment %}
 
+<!-- ジャンボトロン　エリア微調整したい。大きすぎる -->
+<div id="title" class="jumbotron jumbotron-fluid" style="margin-top:0px; padding-top:60px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(0, 123, 255, 0.8); color: white;">
+    <div class="container">
+        <h2 class="display-6">買ってよかったもの発表ドラゴン</h2>
+        <p class="lead">正式名称が〜</p>
+    </div>
+</div>
+
+<!-- nav　左サイドメニュー -->
+<nav id="navbar" style="position: fixed; top: 170px; left: 0; height: 100%; overflow-y: auto; width: 10rem; background-color: #f8f9fa;">
+    <!-- タブ部分 -->
+    <ul class="nav nav-pills flex-column float-left" id="myTab" role="tablist" style="max-width: 10rem">
+
+        <!-- TOP -->
+        {% if '/rank/top/' in request.path %}
+        <li class="nav-item"><a class="nav-link active" href="#show">ランキングを見る</a></li>
+        <li class="nav-item"><a class="nav-link" href="#entry">ランキング登録</a></li>
+        <li class="nav-item"><a class="nav-link" href="#image">空間イメージ</a></li>
+        <!-- detail -->
+        {% elif '/rank/' in request.path %}
+        <li class="nav-item"><a class="nav-link active" href="#1">カテゴリ1</a></li>
+        <li class="nav-item"><a class="nav-link" href="#2">カテゴリ2</a></li>
+        <li class="nav-item"><a class="nav-link" href="#3">カテゴリ3</a></li>
+        {% endif %}
+
+        {% comment %}左メニューのタブ化はやめる。ドロップダウン調査するけど一旦コメントアウト。一番上には「Ctrl + home」で。
+        <li class="nav-item"><a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab"
+                                aria-controls="home" aria-selected="true">ランキングを見る</a></li>
+        <li class="nav-item"><a class="nav-link" id="profile-tab" data-toggle="pill" href="#profile" role="tab"
+                                aria-controls="profile" aria-selected="false">ランキング登録</a></li>
+        <li class="nav-item"><a class="nav-link" id="contact-tab" data-toggle="pill" href="#contact" role="tab"
+                                aria-controls="contact" aria-selected="false">空間イメージ</a></li>
+        <li class="nav-item dropend">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+               aria-expanded="false">ドロップダウン</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">リンク1</a>
+                <a class="dropdown-item" href="#">リンク2</a>
+                <a class="dropdown-item" href="#">リンク3</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">その他のリンク</a>
+            </div>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">一番上に戻る</a></li>
+        {% endcomment %}
+
+    </ul>
+</nav>
+{% comment %}左メニューのタブ化はやめる。
+<!-- コンテンツ部分 -->
+<div style="margin-left: 8rem; padding: 1rem;">
+    <div class="tab-content mt-3 mb-3" id="myTabContent">
+
+        <!-- コンテンツ1 -->
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <!--<img class="card-img-top" src="{% static 'img/ウソップ.png' %}" alt="..." style="max-width: 3rem">-->
+            a
+        </div>
+
+        <!-- コンテンツ2 -->
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            i
+        </div>
+
+        <!-- コンテンツ3 -->
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+            u
+        </div>
+
+    </div>
+</div>
+{% endcomment %}
+
 <!-- 各コンテンツ格納 -->
 <main class="container-fluid themed-container">
     <div class="bg-light p-5 rounded">
