--- a/templates/rank/detail.html
+++ b/templates/rank/detail.html
@@ -5,7 +5,8 @@
 {% block header %}{% endblock %}
 
 {% block content %}
-<h3>データ一覧</h3>
+<div style="margin-left: 8rem;">
+<h3 style="padding-top: 170px; margin-top: -100px;">データ一覧</h3>
 
 {% if messages %}
     {% for message in messages %}
@@ -104,6 +105,7 @@
         </div>
     </div>
     {% endfor %}
+</div>
 </div>
 <br>
 <br>
