--- a/templates/base.html
+++ b/templates/base.html
@@ -78,34 +78,20 @@
     {% block header %}{% endblock %}
 </head>
 
-
 <body class="pt-5" data-spy="scroll" data-target="#navbar" style="padding-top:0px; padding-bottom:0px;">
 
-{% comment %}
-<!-- baseフッダー -->
-<nav class="navbar navbar-expand fixed-bottom navbar-dark bg-dark" role="navigation" style="height:30px">
-    <div class="col-3">
-        <a class="navbar-brand" href="#">一番上に戻る</a>
+
+<!-- ジャンボトロン　エリア微調整したい。大きすぎる -->
+<div id="title" class="jumbotron jumbotron-fluid" style="margin-top:-50px; padding-top:0px; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(0, 123, 255, 0.8); color: white;">
+    <div class="container">
+        <h2 class="display-6">買ってよかったもの発表ドラゴン</h2>
+        <p class="lead">正式名称が〜</p>
     </div>
-    <div class="col-3 offset-md-8">
-        <ul class="navbar-nav p-3">
-            <li class="navbar-item dropup">
-                <button type="button" class="btn btn-dark nav-link dropdown-toggle" id="navbarDropdownMenu2"
-                        data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">ChatBot</button>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu2">
-                    <h6 class="dropdown-header">ChatBot</h6>
-                    <div class="dropdown-divider"></div>
-                    <span class="dropdown-item-text">AI君</span>
-                    <span class="dropdown-item-text">クレーマーさん</span>
-                </div>
-            </li>
-        </ul>
-    </div>
-</nav>
-{% endcomment %}
+</div>
 
 <!-- baseヘッダー -->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<!--<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">-->
+<nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark" style="margin-top:-16px;">
     <div class="container-fluid">
         <!-- ナビゲーションバーのトグル機能、あってるのかいつか確認はしたいけど、、、 -->
         <!-- こいつなに？ -->
@@ -139,25 +125,6 @@
 
     </div>
 </nav>
-
-{% comment %}ヘッダーでスクロールスパイ機能
-<nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="breadcrumb" role="navigation">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link active" href="#show">show</a></li>
-            <li class="nav-item"><a class="nav-link" href="#entry">entry</a></li>
-            <li class="nav-item"><a class="nav-link" href="#image">image</a></li>
-        </ul>
-    </div>
-</nav>
-{% endcomment %}
-
-<!-- ジャンボトロン　エリア微調整したい。大きすぎる -->
-<div id="title" class="jumbotron jumbotron-fluid" style="margin-top:0px; padding-top:60px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(0, 123, 255, 0.8); color: white;">
-    <div class="container">
-        <h2 class="display-6">買ってよかったもの発表ドラゴン</h2>
-        <p class="lead">正式名称が〜</p>
-    </div>
-</div>
 
 <!-- nav　左サイドメニュー -->
 <nav id="navbar" style="position: fixed; top: 170px; left: 0; height: 100%; overflow-y: auto; width: 10rem; background-color: #f8f9fa;">
@@ -194,35 +161,10 @@
                 <a class="dropdown-item" href="#">その他のリンク</a>
             </div>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">一番上に戻る</a></li>
         {% endcomment %}
 
     </ul>
 </nav>
-{% comment %}左メニューのタブ化はやめる。
-<!-- コンテンツ部分 -->
-<div style="margin-left: 8rem; padding: 1rem;">
-    <div class="tab-content mt-3 mb-3" id="myTabContent">
-
-        <!-- コンテンツ1 -->
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <!--<img class="card-img-top" src="{% static 'img/ウソップ.png' %}" alt="..." style="max-width: 3rem">-->
-            a
-        </div>
-
-        <!-- コンテンツ2 -->
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-            i
-        </div>
-
-        <!-- コンテンツ3 -->
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-            u
-        </div>
-
-    </div>
-</div>
-{% endcomment %}
 
 <!-- 各コンテンツ格納 -->
 <main class="container-fluid themed-container">
@@ -230,6 +172,6 @@
         {% block content %}{% endblock %}
     </div>
 </main>
-</body>
 
+</body>
 </html>
