--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <!--    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-FTyAmlUhU3pAoEjss+ayE0F5xDjdExFNWtbxdRN+7s0O7r5fSkMfpPt/B4yTNyzE" crossorigin="anonymous"></script>-->
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpy3dYDeYY6x0q8XtF9cX5Zb8ULlH1a4N/BmQZkl6Q6o7/tv7hZIM4Xpjblgk9i/" crossorigin="anonymous"></script>-->
 
@@ -91,7 +92,7 @@
 
 <!-- baseヘッダー -->
 <!--<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">-->
-<nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark" style="margin-top:-16px;">
+<nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark" style="margin-top:-32px;">
     <div class="container-fluid">
         <!-- ナビゲーションバーのトグル機能、あってるのかいつか確認はしたいけど、、、 -->
         <!-- こいつなに？ -->
@@ -127,7 +128,7 @@
 </nav>
 
 <!-- nav　左サイドメニュー -->
-<nav id="navbar" style="position: fixed; top: 170px; left: 0; height: 100%; overflow-y: auto; width: 10rem; background-color: #f8f9fa;">
+<nav id="navbar" style="position: fixed; top: 150px; left: 0; height: 100%; overflow-y: auto; width: 10rem; background-color: #f8f9fa;">
     <!-- タブ部分 -->
     <ul class="nav nav-pills flex-column float-left" id="myTab" role="tablist" style="max-width: 10rem">
 
