--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -254,3 +254,10 @@ body {
 </div>
 {% endblock %}
 
+
+<!-- nav　左サイドメニュー -->
+{% block additional_content %}
+        <li class="nav-item"><a class="nav-link active" href="#show">ランキングを見る</a></li>
+        <li class="nav-item"><a class="nav-link" href="#entry">ランキング登録</a></li>
+        <li class="nav-item"><a class="nav-link" href="#image">空間イメージ</a></li>
+{% endblock %}
