--- a/templates/rank/detail.html
+++ b/templates/rank/detail.html
@@ -148,9 +148,35 @@
     });
 {% endfor %}
 </script>
+{% endblock %}
 
 
 
+<!-- nav　左サイドメニュー -->
+{% block additional_content %}
 
+        {% for category1_record in category1_records %}
+            <li class="nav-item"><a class="nav-link" href="#1">{{ category1_record.category1 }}</a></li>
+        {% endfor %}
+
+        {% comment %}カテゴリー1タブ化
+        <li class="nav-item"><a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab"
+                                aria-controls="home" aria-selected="true">ランキングを見る</a></li>
+        <li class="nav-item"><a class="nav-link" id="profile-tab" data-toggle="pill" href="#profile" role="tab"
+                                aria-controls="profile" aria-selected="false">ランキング登録</a></li>
+        <li class="nav-item"><a class="nav-link" id="contact-tab" data-toggle="pill" href="#contact" role="tab"
+                                aria-controls="contact" aria-selected="false">空間イメージ</a></li>
+        <li class="nav-item dropend">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+               aria-expanded="false">ドロップダウン</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">リンク1</a>
+                <a class="dropdown-item" href="#">リンク2</a>
+                <a class="dropdown-item" href="#">リンク3</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">その他のリンク</a>
+            </div>
+        </li>
+        {% endcomment %}
 
 {% endblock %}
