baseの考え方。 detail変更。左メニューにカテゴリ①、 アコーディオンのカテゴリ②を括り、TOP10表示 あとはタブ切替たい。

--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
 <nav id="navbar" style="position: fixed; top: 150px; left: 0; height: 100%; overflow-y: auto; width: 10rem; background-color: #f8f9fa;">
     <!-- タブ部分 -->
     <ul class="nav nav-pills flex-column float-left" id="myTab" role="tablist" style="max-width: 10rem">
-        {% block additional_content %}{% endblock %}
+        {% block left_side_menu_content %}{% endblock %}
     </ul>
 </nav>
 
