--- a/templates/rank/detail.html
+++ b/templates/rank/detail.html
@@ -153,7 +153,7 @@
 
 
 <!-- nav　左サイドメニュー -->
-{% block additional_content %}
+{% block left_side_menu_content %}
 
         {% for category1_record in category1_records %}
             <li class="nav-item"><a class="nav-link" href="#1">{{ category1_record.category1 }}</a></li>
