--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -256,7 +256,7 @@ body {
 
 
 <!-- nav　左サイドメニュー -->
-{% block additional_content %}
+{% block left_side_menu_content %}
         <li class="nav-item"><a class="nav-link active" href="#show">ランキングを見る</a></li>
         <li class="nav-item"><a class="nav-link" href="#entry">ランキング登録</a></li>
         <li class="nav-item"><a class="nav-link" href="#image">空間イメージ</a></li>
